[gd_scene load_steps=6 format=2]

[ext_resource path="res://import/googleFonts/Poppins/Poppins-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Resource/NPC/NPCInteractions/ConversationArea.gd" type="Script" id=2]

[sub_resource type="CapsuleShape" id=1]
radius = 0.426318
height = 0.002

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.87451, 0.823529, 0.266667, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.760784, 0.572549, 0.0117647, 1 )
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[node name="ConversationArea" type="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0301132, 0 )
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0159159, 0, 0.0713849 )
shape = SubResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_right = 1.0
mouse_filter = 1
custom_constants/margin_top = 100

[node name="center" type="HBoxContainer" parent="Control/MarginContainer"]
margin_top = 100.0
margin_right = 1024.0
margin_bottom = 168.0
alignment = 1

[node name="TalkToMe" type="Panel" parent="Control/MarginContainer/center"]
margin_left = 412.0
margin_right = 612.0
margin_bottom = 68.0
rect_min_size = Vector2( 200, 68 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/panel = SubResource( 2 )

[node name="inner" type="MarginContainer" parent="Control/MarginContainer/center/TalkToMe"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="separate" type="HBoxContainer" parent="Control/MarginContainer/center/TalkToMe/inner"]
margin_left = 20.0
margin_top = 20.0
margin_right = 180.0
margin_bottom = 48.0

[node name="press" type="Label" parent="Control/MarginContainer/center/TalkToMe/inner/separate"]
margin_right = 119.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Hi there...."

[node name="talk" type="Label" parent="Control/MarginContainer/center/TalkToMe/inner/separate"]
margin_left = 123.0
margin_right = 160.0
margin_bottom = 28.0
size_flags_horizontal = 9
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "[w]"
align = 2

[connection signal="body_entered" from="." to="." method="_on_ConversationArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_ConversationArea_body_exited"]
